--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
   "name": "api-gateway",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "description": "",
+  "main": "src/index.ts",
+  "scripts": {
+    "build": "rm -rf build/ && prettier --write src/ && tsc"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aburke15/api-gateway.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/aburke15/api-gateway/issues"
+  },
+  "homepage": "https://github.com/aburke15/api-gateway#readme",
   "dependencies": {
-    "cors": "^2.8.5",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
-  "scripts": {
-    "start": "yarn run",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "devDependencies": {
-    "@types/cors": "^2.8.10",
+    "@types/body-parser": "^1.19.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11"
   }
 }
