--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.1"
+    "mongoose": "^5.12.1",
+    "prettier": "^2.2.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.11"
+    "@types/express": "^4.17.11",
+    "nodemon": "^2.0.7"
   }
 }
