--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "build": "rm -rf build/ && prettier --write src/ && tsc",
+    "devBuild": "rm -rf dist/ && prettier --write src/ && tsc -b",
+    "build": "tsc -b",
     "start": "nodemon src/index.ts"
   },
   "repository": {
@@ -33,6 +34,7 @@
     "@types/body-parser": "^1.19.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1"
   }
 }
